Cut workflows and schedules over to canonical API
